--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Learning bootstrap v5 with sass</title>
     <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/vendors/glightbox/css/glightbox.min.css" />
+    <link
+      rel="stylesheet"
+      href="assets/vendors/glightbox/css/glightbox.min.css"
+    />
     <link rel="stylesheet" href="assets/css/fontawesome.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700;800;900&display=swap" rel="stylesheet">
-
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- ////////////////////////////////////////////////////////////////////////////////////////
@@ -81,37 +86,237 @@
           <!-- START THE CONTENT FOR THE VIDEO -->
           <div class="col-md-6 intros text-end p-5">
             <div class="video-box">
-                <img src="images/arts/intro-section-illustration.png" alt="video illustration" class="img-fluid">
-                <a href="https://www.youtube.com/watch?v=Ga6RYejo6Hk" class="glightbox position-absolute top-50 start-50 translate-middle">
-                    <span>
-                        <i class="fas fa-play-circle"></i>
-                    </span>
-                    <span class="border-animation border-animation--border-1 "></span>
-                    <span class="border-animation border-animation--border-2 "></span>
-                </a>
+              <img
+                src="images/arts/intro-section-illustration.png"
+                alt="video illustration"
+                class="img-fluid"
+              />
+              <a
+                href="https://www.youtube.com/watch?v=Ga6RYejo6Hk"
+                class="glightbox position-absolute top-50 start-50 translate-middle"
+              >
+                <span>
+                  <i class="fas fa-play-circle"></i>
+                </span>
+                <span
+                  class="border-animation border-animation--border-1"
+                ></span>
+                <span
+                  class="border-animation border-animation--border-2"
+                ></span>
+              </a>
             </div>
           </div>
         </div>
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,160L48,154.7C96,149,192,139,288,160C384,181,480,235,576,229.3C672,224,768,160,864,160C960,160,1056,224,1152,213.3C1248,203,1344,117,1392,74.7L1440,32L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#fff"
+          fill-opacity="1"
+          d="M0,160L48,154.7C96,149,192,139,288,160C384,181,480,235,576,229.3C672,224,768,160,864,160C960,160,1056,224,1152,213.3C1248,203,1344,117,1392,74.7L1440,32L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+        ></path>
+      </svg>
     </section>
 
     <!-- //////////////////////////////////////////////////////////////////////////////////////////////
                              START SECTION 3 - THE CAMPANIES SECTION  
-////////////////////////////////////////////////////////////////////////////////////////////////////-->
+    ////////////////////////////////////////////////////////////////////////////////////////////////////-->
+
+    <section id="companies" class="companies">
+      <div class="container">
+        <div class="row text-center">
+          <h4 class="fw-bold lead mb3">Truested by companies like</h4>
+          <div class="heading-line mb-5"></div>
+        </div>
+      </div>
+      <!-- START THE COMPANIES CONTENT  -->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 col-lg-2">
+            <div class="companies__logo-box shadow-sm">
+              <img
+                src="images/companies/campany-1.png"
+                alt="Company 1 logo"
+                title="Company 1 logo"
+                class="img-fluid"
+              />
+            </div>
+          </div>
+          <div class="col-md-4 col-lg-2">
+            <div class="companies__logo-box shadow-sm">
+              <img
+                src="images/companies/campany-2.png"
+                alt="Company 2 logo"
+                title="Company 2 logo"
+                class="img-fluid"
+              />
+            </div>
+          </div>
+          <div class="col-md-4 col-lg-2">
+            <div class="companies__logo-box shadow-sm">
+              <img
+                src="images/companies/campany-3.png"
+                alt="Company 3 logo"
+                title="Company 3 logo"
+                class="img-fluid"
+              />
+            </div>
+          </div>
+          <div class="col-md-4 col-lg-2">
+            <div class="companies__logo-box shadow-sm">
+              <img
+                src="images/companies/campany-4.png"
+                alt="Company 4 logo"
+                title="Company 4 logo"
+                class="img-fluid"
+              />
+            </div>
+          </div>
+          <div class="col-md-4 col-lg-2">
+            <div class="companies__logo-box shadow-sm">
+              <img
+                src="images/companies/campany-5.png"
+                alt="Company 5 logo"
+                title="Company 5 logo"
+                class="img-fluid"
+              />
+            </div>
+          </div>
+          <div class="col-md-4 col-lg-2">
+            <div class="companies__logo-box shadow-sm">
+              <img
+                src="images/companies/campany-6.png"
+                alt="Company 6 logo"
+                title="Company 6 logo"
+                class="img-fluid"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- //////////////////////////////////////////////////////////////////////////////////////////////
                          START SECTION 4 - THE SERVICES  
-///////////////////////////////////////////////////////////////////////////////////////////////////-->
+    ///////////////////////////////////////////////////////////////////////////////////////////////////-->
+
+    <section id="services" class="services border">
+        <div class="container">
+            <div class="row text-center">
+                <h1 class="fw-bold display-3">Our Services</h1>
+                <div class="heading-line mb-1"></div>
+            </div>
+
+        <!-- START THE DESCRIPTION CONTENT  -->
+            <div class="row pt-2 pb-2 mt-0 mb-3">
+                <div class="col-md-6 border-right">
+                    <div class="bg-white p-3">
+                        <h2 class="fw-bold text-center text-capitalize">
+                            Our service range from initial design to development anywhere anytime
+                        </h2>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="bg-white p-4 text-start">
+                        <p class="fw-light">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Ipsa similique enim velit inventore possimus?
+                            Sint officia aspernatur pariatur magni nobis reiciendis eos ipsam perspiciatis cumque qua
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- START THE CONTNET FOR SERVICES  -->
+        
+        <div class="container">
+            <!-- START THE MARKETING CONTNET  -->
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
+                    <div class="services__content">
+                        <div class="icon d-block fas fa-paper-plane"></div>
+                        <h3 class="display-3--title mt-1">Marketing </h3>
+                        <p class="lh-lg">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                             A sunt veritatis quam perspiciatis recusandae aut vitae neque, porro possimus earum nisi magni reiciendis.
+                             Maxime eos ut mollitia dicta tenetur ex.
+                        </p>
+                        <button type="button" class="rounded-pill btn-rounded border border-primary">
+                            Learn more 
+                            <span><i class="fas fa-arrow-right"></i></span>
+                        </button>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-end">
+                    <div class="services__pic">
+                        <img src="images/services/service-1.png" alt="marketing illustration" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+            <!-- START THE WEB DEVELOPMENT CONTENT  -->
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-start">
+                    <div class="services__pic">
+                        <img src="images/services/service-2.png" alt="web development illustration" class="img-fluid">
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
+                    <div class="services__content">
+                        <div class="icon d-block fas fa-code"></div>
+                        <h3 class="display-3--title mt-1">Web development </h3>
+                        <p class="lh-lg">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                             A sunt veritatis quam perspiciatis recusandae aut vitae neque, porro possimus earum nisi magni reiciendis.
+                             Maxime eos ut mollitia dicta tenetur ex.
+                        </p>
+                        <button type="button" class="rounded-pill btn-rounded border border-primary">
+                            Learn more 
+                            <span><i class="fas fa-arrow-right"></i></span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- START THE COLOUD HOSTING CONTENT  -->
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
+                    <div class="services__content">
+                        <div class="icon d-block fas fa-cloud-upload-alt">
+                        </div>
+                        <h3 class="display-3--title mt-1">Cloud Hosting </h3>
+                        <p class="lh-lg">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                             A sunt veritatis quam perspiciatis recusandae aut vitae neque, porro possimus earum nisi magni reiciendis.
+                             Maxime eos ut mollitia dicta tenetur ex.
+                        </p>
+                        <button type="button" class="rounded-pill btn-rounded border border-primary">
+                            Learn more 
+                            <span><i class="fas fa-arrow-right"></i></span>
+                        </button>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-end">
+                    <div class="services__pic">
+                        <img src="images/services/service-3.png" alt="cloud illustration" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+
+
 
     <script src="assets/vendors/glightbox/js/glightbox.min.js"></script>
     <script type="text/javascript">
-        const lightbox = GLightbox({
-            'href': 'https://www.youtube.com/watch?v=Ga6RYejo6Hk',
-            'type': 'video',
-            'source': 'youtube', //vimeo, youtube or local
-            'width': 900,
-        });
+      const lightbox = GLightbox({
+        href: "https://www.youtube.com/watch?v=Ga6RYejo6Hk",
+        type: "video",
+        source: "youtube", //vimeo, youtube or local
+        width: 900,
+      });
     </script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
   </body>
