--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                          START SECTION 4 - THE SERVICES  
     ///////////////////////////////////////////////////////////////////////////////////////////////////-->
 
-    <section id="services" class="services border">
+    <section id="services" class="services ">
         <div class="container">
             <div class="row text-center">
                 <h1 class="fw-bold display-3">Our Services</h1>
@@ -305,6 +305,127 @@
         </div>
 
     </section>
+
+    <!-- /////////////////////////////////////////////////////////////////////////////////
+                        START SECTION 5- THE TESTIMONIALS 
+       //////////////////////////////////////////////////////////////////////////////////-->
+
+     <section id="testimonials" class="testimonials">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,192L48,165.3C96,139,192,85,288,90.7C384,96,480,160,576,186.7C672,213,768,203,864,181.3C960,160,1056,128,1152,144C1248,160,1344,224,1392,256L1440,288L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
+        <div class="container">
+            <div class="row text-center text-white">
+                <h1 class="fw-bold display-3">Testimonials</h1>
+                <hr class="mx-auto" style="width: 100px; height: 3px">
+                <p class="lead pt-1">What our clients say</p>
+            </div>
+             <!-- START THE CAROSUL CONTENT  -->
+             <div class="row align-items-center">
+                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+                    <div class="carousel-inner">
+                      <!-- CAROSUL ITEM 1 -->
+                      <div class="carousel-item active">
+                            <!-- testimonials card  -->
+                            <div class="testimonials__card">
+                                <p class="lh-lg">
+                                    <i class="fas fa-quote-left"></i>
+                                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                     Blanditiis maxime similique in commodi at magni id placeat maiores facilis omnis.
+                                     Maxime aut nostrum architecto obcaecati enim explicabo magni asperiores ullam.
+                                    <i class="fas fa-quote-left"></i>
+                                    <div class="ratings p-1">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                </p>
+                            </div>
+                            <!-- client picture -->
+                            <div class="testimonials__picture">
+                                <img src="images/testimonials/client-1.jpg" alt="Client 1 picture" class="img-fluid rounded-circle">
+                            </div>
+                            <!-- clitent name & role  -->
+                            <div class="testimonials__name">
+                                <h3>Jhon Doe</h3>
+                                <p class="fw-light">CEO & Founder</p>
+                            </div>
+                      </div>
+                      <!-- CAROSUL ITEM 2 -->
+                      <div class="carousel-item">
+                        <!-- testimonials card  -->
+                        <div class="testimonials__card">
+                            <p class="lh-lg">
+                                <i class="fas fa-quote-left"></i>
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                 Blanditiis maxime similique in commodi at magni id placeat maiores facilis omnis.
+                                 Maxime aut nostrum architecto obcaecati enim explicabo magni asperiores ullam.
+                                <i class="fas fa-quote-left"></i>
+                                <div class="ratings">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                            </p>
+
+                        </div>
+                        <!-- client picture -->
+                        <div class="testimonials__picture">
+                            <img src="images/testimonials/client-2.jpg" alt="Client 2 picture" class="rounded-circle img-fluid">
+                        </div>
+                        <!-- clitent name & role  -->
+                        <div class="testimonials__name">
+                            <h3>Kim hu</h3>
+                            <p class="fw-light">Content creator</p>
+                        </div>
+                      </div>
+                      <!-- CAROSUL ITEM 3 -->
+                     <div class="carousel-item">
+                        <!-- testimonials card  -->
+                        <div class="testimonials__card">
+                            <p class="lh-lg">
+                                <i class="fas fa-quote-left"></i>
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                 Blanditiis maxime similique in commodi at magni id placeat maiores facilis omnis.
+                                 Maxime aut nostrum architecto obcaecati enim explicabo magni asperiores ullam.
+                                <i class="fas fa-quote-left"></i>
+                                <div class="ratings">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                            </p>
+
+                        </div>
+                        <!-- client picture -->
+                        <div class="testimonials__picture">
+                            <img src="images/testimonials/client-3.jpg" alt="Client 3 picture" class="rounded-circle img-fluid">
+                        </div>
+                        <!-- clitent name & role  -->
+                        <div class="testimonials__name">
+                            <h3>Peter Smith</h3>
+                            <p class="fw-light">Finance Manager</p>
+                        </div>
+                     </div>
+                    </div>
+                    <div class="text-center">
+                        <button class=" btn btn-outline-light fas fa-long-arrow-alt-left" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                        </button>
+                        <button class="btn btn-outline-light fas fa-long-arrow-alt-right" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                        </button>
+                    </div>
+                   
+                  </div>
+             </div>
+        </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,192L48,165.3C96,139,192,85,288,90.7C384,96,480,160,576,186.7C672,213,768,203,864,181.3C960,160,1056,128,1152,144C1248,160,1344,224,1392,256L1440,288L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+     </section>   
+
+
 
 
 
